--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "webpack --config ./build/webpack.dev.js && webpack --config ./build/webpack.prod.js && webpack --config ./build/webpack.example.js",
-    "watch": "webpack-dev-server --open --config ./build/webpack.example.js"
+    "watch": "webpack-dev-server --host 0.0.0.0 --port 8081 --open --config ./build/webpack.example.js"
   },
   "repository": {
     "type": "git",
